--- a/2019/1/MAT1203/15/solucion.tex
+++ b/2019/1/MAT1203/15/solucion.tex
@@ -1337,5 +1337,239 @@ Para que $Gen\{v_1, v_2, v_3\}=Gen\{v_1,v_2\}$, debe ocurrir que estos generados
 	Luego, para que la matriz tenga 2 pivotes, debe ocurrir que
 	$$2h-2 = 0 \ra h = 1$$
 \end{solucion}
+\item Sean $\{u, v, w\}$ un conjunto de vectores linealmente independientes. Demuestre que el conjunto $\{u+v, u+2w, v+3u+w\}$ es linealmente independiente.
+\begin{solucion}
+$$P.D. \quad \{y, v, w\}\quad L.I. \ra \{u+v, u+2w, v+3u+w\}\quad L.I.$$
+		Para que $\{u+v, u+2w, v+3u+w\}$ sea L.I., tiene que cumplirse que el sistema
+		$$\alpha(u+v) + \beta(u+2w) + \gamma(v+3u+w) = 0$$
+		tenga solucion única $\begin{pmatrix}
+		\alpha\\ \beta \\ \gamma
+		\end{pmatrix} = \begin{pmatrix} 0\\0\\0\end{pmatrix}$\\
+		Trabajemos entonces con el sistema
+		$$\alpha(u+v) + \beta(u+2w) + \gamma(v+3u+w) = 0$$
+		$$\alpha u+ \alpha v + \beta u+2\beta w + \gamma v+3\gamma u+\gamma w = 0$$
+		$$(\alpha + \beta + 3 \gamma)u + (\alpha + \gamma)v + (2\beta + \gamma)w = 0$$
+		Recordemos que ${u, v, w}$ es L.I, por lo que debe cumplirse que
+		$$\begin{array}{rcl}
+		\alpha + \beta + 3 \gamma & = & 0\\
+		\alpha + \gamma & = & 0\\
+		2\beta + \gamma & = & 0
+		\end{array}$$
+		Este sistema lo podemos expresar de forma matricial,
+		$$\begin{bmatrix}
+		1 & 1 & 3\\
+		1 & 0 & 1 \\
+		0 & 2 & 1
+		\end{bmatrix} \stackrel{F.E.}{\sim} \begin{bmatrix}
+		1 & 0 & 1\\
+		0 & 1 & -2\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		Cuya solución es
+		$$\begin{array}{rcl}
+		\alpha & = & 0\\
+		\beta & = & 0\\
+		\gamma & = & 0
+		\end{array}$$
+		$$q.e.d$$
+	
+\end{solucion}
+\item Demuestre que el conjunto $\{u, v, w\}$ es L.I. si y solo si el conjunto $\{u+v, u+w, v+w\}$ es L.I.
+\begin{solucion}
+Como nos dicen si y solo si, debemos demostrar en ambas direcciones
+		$$(\Longrightarrow)$$
+		Digamos que $\{u, v, w\}$ es L.I.\\
+		\\
+		P.D. $\{u+v, u+w, v+w\}$ es L.I.\\
+		\\
+		Para que $\{u+v, u+w, v+w\}$ sea L.I., el sistema
+		$$\alpha (u+v) + \beta (u+w) + \gamma (v+w) = 0$$
+		debe tener solución única $\alpha = 0$, $\beta = 0$, $\gamma = 0$
+		Reordenando,
+		$$\alpha (u+v) + \beta (u+w) + \gamma (v+w) = 0$$
+		$$(\alpha + \beta) u + (\alpha + \gamma) v + (\beta + \gamma) w = 0$$
+		Como sabemos que el conjunto $\{u, v, w\}$ es L.I., entonces tenemos que
+		$$\begin{array}{rl}
+		\alpha + \beta & = 0\\
+		\alpha + \gamma & = 0\\
+		\beta + \gamma & = 0
+		\end{array}$$
+		Este sistema tiene por solución
+		$$\alpha = 0, \quad \beta = 0, \quad \gamma = 0$$
+		Con lo que demostramos que $\{u+v, u+w, v+w\}$ es L.I.
+		$$(\Longleftarrow)$$
+		Digamos que $\{u+v, u+w, v+w\}$ es L.I.\\
+		\\
+		P.D. $\{u, v, w\}$ es L.I.\\
+		\\
+		Para que $\{u, v, w\}$ sea L.I., el sistema
+		$$c_1u + c_2v + c_3w$$
+		debe tener solución única $c_1 = 0$, $c_2 = 0$, $c_3 = 0$\\
+		\\
+		Como $\{u+v, u+w, v+w\}$ es L.I., sabemos que el sistema
+		$$\alpha (u+v) + \beta (u+w) + \gamma (v+w) = 0$$
+		tiene solución única $\alpha = 0$, $\beta = 0$, $\gamma = 0$
+		Reordenando,
+		$$\alpha (u+v) + \beta (u+w) + \gamma (v+w) = 0$$
+		$$(\alpha + \beta) u + (\alpha + \gamma) v + (\beta + \gamma) w = 0$$
+		Con lo que tenemos que
+		$$c_1 = \alpha + \beta = 0, \quad c_2 = \alpha + \gamma = 0, \quad c_3 = \beta + \gamma = 0$$
+		es la única solución del sistema. \\
+		\\
+		Luego, $\{u, v, w\}$ es L.I.
+		$$q.e.d$$
+\end{solucion}
+\item Sea $L: P_2(\R) \ra \R^2$ una transformación lineal tal que
+	$$L(1+x) = \begin{pmatrix}
+	1\\
+	1
+	\end{pmatrix}, \quad L(1+x+x^2) = \begin{pmatrix}
+	1\\
+	-1
+	\end{pmatrix}\ y \ L(1+2x) = \begin{pmatrix}
+	1\\
+	2
+	\end{pmatrix}$$
+	determine $L(a+bx+cx^2)$ para todo $a,b,c \in \R$.
+\begin{solucion}
+Recordemos la siguientes propiedades de las transformaciones lineales
+		$$L(v_1) + L(v_2) = L(v_1 + v_2), \quad \alpha L(v) = L(\alpha v)$$
+		Debemos buscar 
+		$$L(1), \quad L(x), \quad L(x^2)$$
+		Para esto, debemos jugar con la información que nos dan hasta encontrar cada uno de ellos.
+		\begin{center}\rule{14.5cm}{0.1pt}\end{center}
+		$$L(1+x+x^2) - L(1+x) = \begin{pmatrix}
+		1\\-1
+		\end{pmatrix} - \begin{pmatrix}
+		1\\1
+		\end{pmatrix}$$
+		$$L(x^2) = \begin{pmatrix}
+		0\\-2
+		\end{pmatrix}$$
+		
+		\begin{center}\rule{14.5cm}{0.1pt}\end{center}
+		$$L(1+2x) - L(1+x) = \begin{pmatrix}
+		1\\2
+		\end{pmatrix} - \begin{pmatrix}
+		1\\1
+		\end{pmatrix}$$
+		$$L(x) = \begin{pmatrix}
+		0\\1
+		\end{pmatrix}$$
+		
+		\begin{center}\rule{14.5cm}{0.1pt}\end{center}
+		$$L(1+x) - L(x) = \begin{pmatrix}
+		1\\1
+		\end{pmatrix} - \begin{pmatrix}
+		0\\1
+		\end{pmatrix}$$
+		$$L(x) = \begin{pmatrix}
+		1\\0
+		\end{pmatrix}$$
+		
+		Luego, 
+		$$L(a+bx+cx^2) = aL(1) + bL(x) + cL(x^2)$$
+		$$L(a+bx+cx^2) = aL\begin{pmatrix}1\\0\end{pmatrix} + b\begin{pmatrix}0\\1\end{pmatrix} + c\begin{pmatrix}0\\-2\end{pmatrix}$$
+		$$L(a+bx+cx^2) = \begin{pmatrix}a\\b-2c\end{pmatrix}$$
+\end{solucion}
+\item Sea $T$ una transformación lineal tal que
+	$$T\begin{bmatrix}2 \\ 1\end{bmatrix} = \begin{bmatrix}1 \\ 0 \\ 1 \\ 0\end{bmatrix} 
+	\quad y \quad
+	T \begin{bmatrix}3 \\ 1\end{bmatrix}  =\begin{bmatrix}0 \\ 1 \\ 0 \\ 1\end{bmatrix}$$
+	Determine la matriz que representa a $T$
+\begin{solucion}
+Estamos buscando la matriz $\begin{bmatrix}
+		T\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix}
+		&
+		
+		T\begin{bmatrix}
+		0 \\ 1
+		\end{bmatrix}
+		\end{bmatrix}$.\\
+		Entonces, lo que necesitamos es buscar $T\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix}$ y $T\begin{bmatrix}
+			0 \\ 1
+		\end{bmatrix}$ y para ello, debemos escribir cada uno como una combinación lineal de $T\begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix}$ y $T\begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix}$, es decir
+		$$\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix} = \alpha \begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix} +  \beta \begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix} \quad y \quad
+		\begin{bmatrix}
+		0 \\ 1
+		\end{bmatrix} = \gamma \begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix} +  \delta \begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix}$$
+		O sea, debemos resolver los sistemas
+		$$\begin{array}{rcl}
+		2\alpha + 3\beta & = & 1\\
+		\alpha + \beta & = & 0
+		\end{array} \qquad \qquad \qquad
+		\begin{array}{rcl}
+		2\gamma + 3\delta & = & 0\\
+		\gamma + \delta & = & 1
+		\end{array}$$
+		La solución de estos sistemas es
+		$$\alpha = -1, \quad \beta = 1, \quad \gamma = 3, \quad \delta = -2$$
+		Por lo que
+		$$\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix} = \begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix}- \begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix}  \quad y \quad
+		\begin{bmatrix}
+		0 \\ 1
+		\end{bmatrix} = 3 \begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix} - 2 \begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix}$$
+		Luego,
+		$$T\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix} = T\begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix}- T\begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix} = \begin{bmatrix}0 \\ 1 \\ 0 \\ 1\end{bmatrix} - \begin{bmatrix}1 \\0 \\ 1 \\ 0\end{bmatrix} = \begin{bmatrix}-1 \\ 1 \\ -1 \\ 1\end{bmatrix}$$
+		y
+		$$T\begin{bmatrix}
+		0 \\ 1
+		\end{bmatrix} = 3 T\begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix} - 2 T\begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix} = 3 \begin{bmatrix}1 \\ 0 \\ 1 \\ 0\end{bmatrix} - 2 \begin{bmatrix}0 \\ 1 \\ 0 \\ 1\end{bmatrix} = \begin{bmatrix}3 \\ -2 \\ 3 \\ -2\end{bmatrix}$$
+		Finalmente, la matriz que representa $T$ es
+		$$\begin{bmatrix}
+		T\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix}
+		&
+		
+		T\begin{bmatrix}
+		0 \\ 1
+		\end{bmatrix}
+		\end{bmatrix} =
+		\begin{bmatrix}
+		-1 & 3 \\
+		1 & -2 \\
+		-1 & 3 \\
+		1 & -2
+		\end{bmatrix}$$
+\end{solucion}
 \end{preguntas}
 \end{document}
