Enunciado de 2019/1/MAT1203/15

--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -314,5 +314,61 @@ $$v_1=\left(\begin{array}{r}
 	\quad y \quad
 	T \begin{bmatrix}3 \\ 1\end{bmatrix}  =\begin{bmatrix}0 \\ 1 \\ 0 \\ 1\end{bmatrix}$$
 	Determine la matriz que representa a $T$
+\item Sea la transformación lineal $T$, dada por la matriz
+	$$T = \begin{bmatrix}
+	1 & 2 & -1\\
+	2 & 4 & -2
+	\end{bmatrix}$$
+	Determine la imagen del plano de ecuación $x_1 + x_3 = 1$ por T.
+\item Sea $\mathbb{P} \subset \R^3$ el plano de ecuación $x_1-x_2+1=0$ y sea $T:\R^3 \ra \R^4$ la transformación dada por $T(x) = Ax$, donde
+$$A = \begin{bmatrix}
+1 & 0 & 3\\
+-1 & 1 & 0 \\
+0 & 1 & 3\\
+0 & -2 & -6
+\end{bmatrix}$$
+Demuestre que la imagen del plano $\mathbb{P}$ bajo la transformación $T$ es una recta en $\R^4$.
+\item Determine si las siguientes afirmaciones son verdaderas o falsas.
+\begin{enumerate}[a)]
+\item Para todo $u, v \in \R^n$ se tiene que $||u+v|| < ||u||+||v||$
+\item Si $u \in Gen\{v_1, v_2\}$ entonces $Gen\{u, v_1\} \subset Gen\{u, v_2\}$
+\item Sea $A$ una matriz de $n \times m$ tal que $n < m $, entonces las columnas de A son L.D.
+\item Si $A$ es una matriz de $2 \times 3$ tal que $Ax = \begin{pmatrix}
+		1\\
+		1
+		\end{pmatrix}$ y $ Ax = \begin{pmatrix}
+		1\\
+		2
+		\end{pmatrix}$ tienen solución, entonces las filas de $A$ son L.I.
+\end{enumerate}
+\item Sea
+	$$A = \begin{bmatrix}
+	1 & 0 & 6\\
+	-1 & 2 & 0\\
+	0 & 5 & -1
+	\end{bmatrix}$$
+	Escriba $A$ como un producto de matrices elementales
+\item Determinar la matriz inversa de
+$$A = \begin{bmatrix}
+1 & -1 & 0 \\
+0 & 1 & 0 \\
+2 & 0 & 1
+\end{bmatrix}$$
+\item Sea $A$ una matriz de $n\times m$ con columnas LI. Demuestre que si $P=A(A^tA)^{-1}A^{t}$, entonces $P^2=P$ y $P=P^t$.
+\item Sea $A$ una matriz de $3\times 3$ tal que
+      $$A\left(\begin{array}{r}
+  1\\0\\1
+\end{array}\right)= \left(\begin{array}{r}
+  1\\0\\0
+\end{array}\right),\quad\quad A \left(\begin{array}{r}
+  1\\-2\\4
+\end{array}\right)= \left(\begin{array}{r}
+  1\\0\\1
+\end{array}\right), \qquad  A\left(\begin{array}{r}
+  -1\\1\\1
+\end{array}\right)= \left(\begin{array}{r}
+  0\\1\\1
+\end{array}\right).$$ Calcule $A^{-1}$.
+\item Demuestre que $T(x_1,x_2, x_3)=(x_1,x_1+x_2, x_1+x_2+x_3)$ es invertible y encuentre una f\'ormula para $T^{-1}$.
 \end{preguntas}
 \end{document}
