--- a/2019/1/MAT1203/15/solucion.tex
+++ b/2019/1/MAT1203/15/solucion.tex
@@ -1571,5 +1571,534 @@ Estamos buscando la matriz $\begin{bmatrix}
 		1 & -2
 		\end{bmatrix}$$
 \end{solucion}
+\item Sea la transformación lineal $T$, dada por la matriz
+	$$T = \begin{bmatrix}
+	1 & 2 & -1\\
+	2 & 4 & -2
+	\end{bmatrix}$$
+	Determine la imagen del plano de ecuación $x_1 + x_3 = 1$ por T.
+\begin{solucion}
+En primer lugar, escribimos el plano en su forma paramétrica
+		$$\begin{array}{rcl}
+		x_1 & = &1-x_3\\
+		x_2 & = &x_2\\
+		x_3 & = &x_3
+		\end{array}$$
+		Vemos entonces que 3 puntos arbitrarios pertenecienctes al plano son
+		$$P_1(1,0,0), \quad P_2(1,1,0), \quad P_3(0,0,1) $$
+		Luego, dos vectores directores que definen al plano son
+		$$\vec{d_1} = \vec{P_1P_2} = (0,1,0), \quad =\vec{d_2} = \vec{P_1P_3} = (-1,0,1)$$
+		Con esto, podemos expresar el plano en su forma vectorial
+		$$\vec{P}= \vec{P_1} + \alpha \vec{d_1}  + \beta \vec{d_2}$$
+		Para encontrar la imagen del plano por $T$, basta con hacer
+		$$T\vec{P}= T\vec{P_1} + \alpha T\vec{d_1}  + \beta T\vec{d_2}$$
+		Como
+		$$T\vec{P_1} = \begin{bmatrix}
+		1 & 2 & -1\\
+		2 & 4 & -2
+		\end{bmatrix} \begin{bmatrix}
+		1 \\ 0 \\ 0
+		\end{bmatrix} = \begin{bmatrix}
+		1 \\ 2
+		\end{bmatrix}$$
+		$$T\vec{d_1} = \begin{bmatrix}
+		1 & 2 & -1\\
+		2 & 4 & -2
+		\end{bmatrix} \begin{bmatrix}
+		0 \\ 1 \\ 0
+		\end{bmatrix} = \begin{bmatrix}
+		2 \\ 4
+		\end{bmatrix}$$
+		$$T\vec{d_2} = \begin{bmatrix}
+		1 & 2 & -1\\
+		2 & 4 & -2
+		\end{bmatrix} \begin{bmatrix}
+		-1 \\ 0 \\ 1
+		\end{bmatrix} = \begin{bmatrix}
+		-2 \\ -4
+		\end{bmatrix}$$
+		Tenemos que
+		$$TP =  \begin{bmatrix}
+		1 \\ 2
+		\end{bmatrix} + \alpha  \begin{bmatrix}
+		2 \\ 4
+		\end{bmatrix} + 
+		\beta  \begin{bmatrix}
+		-2 \\ -4
+		\end{bmatrix} =  \begin{bmatrix}
+		1 + 2\alpha  - 2\beta \\
+		2 + 4\alpha - 5\beta
+		\end{bmatrix} = 
+		(1+2\alpha - 2\beta)  \begin{bmatrix}
+		1 \\ 2
+		\end{bmatrix}$$
+		En otras palabras, la imagen del plano por la traslación $T$ corresponde a los ponderados de $\begin{bmatrix}
+			1 \\ 2
+		\end{bmatrix}$, es decir
+		$$T\vec{P} = Gen\left\{ \begin{bmatrix}
+		1 \\ 2
+		\end{bmatrix} \right\}$$
+\end{solucion}
+\item Sea $\mathbb{P} \subset \R^3$ el plano de ecuación $x_1-x_2+1=0$ y sea $T:\R^3 \ra \R^4$ la transformación dada por $T(x) = Ax$, donde
+$$A = \begin{bmatrix}
+1 & 0 & 3\\
+-1 & 1 & 0 \\
+0 & 1 & 3\\
+0 & -2 & -6
+\end{bmatrix}$$
+Demuestre que la imagen del plano $\mathbb{P}$ bajo la transformación $T$ es una recta en $\R^4$.
+\begin{solucion}
+Despejando $x_2$ en la ecuación del plano, obtenemos $x_2 = x_1 + 1$.\\
+
+Reemplazando en la transformación lineal,
+{\small $$T(x) = T(x_1, x_2, x_3) = T(x_1, x_1+1, x_3) = \begin{bmatrix}
+1 & 0 & 3\\
+-1 & 1 & 0 \\
+0 & 1 & 3\\
+0 & -2 & -6
+\end{bmatrix}
+\begin{pmatrix}
+x_1 \\
+x_1+1\\
+x_3
+\end{pmatrix} = 
+\begin{pmatrix}
+x_1 +3x_3\\
+1\\
+1+x_1+3x_3\\
+-2-2x_1-6x_3
+\end{pmatrix}$$}
+Esto lo podemos descomponer en
+$$T(x) = 
+\begin{pmatrix}
+x_1 +3x_3\\
+1\\
+1+x_1+3x_3\\
+-2-2x_1-6x_3
+\end{pmatrix} =
+\begin{pmatrix}
+0\\
+1\\
+1\\
+-2
+\end{pmatrix} +
+x_1 \begin{pmatrix}
+1\\
+0\\
+1\\
+-2
+\end{pmatrix} +
+x_3 \begin{pmatrix}
+3\\
+0\\
+3\\
+-6
+\end{pmatrix}
+$$
+Notemos ahora que el vector asociado a $x_3$ es el triple del vector asociado a $x_1$, por lo que podemos factorizarlo de la siguiente forma
+$$T(x) = 
+\begin{pmatrix}
+0\\
+1\\
+1\\
+-2
+\end{pmatrix} +
+x_1 \begin{pmatrix}
+1\\
+0\\
+1\\
+-2
+\end{pmatrix} +
+3x_3 \begin{pmatrix}
+1\\
+0\\
+1\\
+-2
+\end{pmatrix} = 
+\begin{pmatrix}
+0\\
+1\\
+1\\
+-2
+\end{pmatrix} +
+(x_1 + 3x_3) \begin{pmatrix}
+1\\
+0\\
+1\\
+-2
+\end{pmatrix}
+$$
+{\small Esto corresponde a la ecuación de una recta con dirección $\begin{pmatrix}
+1\\
+0\\
+1\\
+-2
+\end{pmatrix}$ y que pasa por $\begin{pmatrix}
+0\\
+1\\
+1\\
+-2
+\end{pmatrix}$.}
+\end{solucion}
+\item Determine si las siguientes afirmaciones son verdaderas o falsas.
+\begin{enumerate}[a)]
+\item Para todo $u, v \in \R^n$ se tiene que $||u+v|| < ||u||+||v||$
+\item Si $u \in Gen\{v_1, v_2\}$ entonces $Gen\{u, v_1\} \subset Gen\{u, v_2\}$
+\item Sea $A$ una matriz de $n \times m$ tal que $n < m $, entonces las columnas de A son L.D.
+\item Si $A$ es una matriz de $2 \times 3$ tal que $Ax = \begin{pmatrix}
+		1\\
+		1
+		\end{pmatrix}$ y $ Ax = \begin{pmatrix}
+		1\\
+		2
+		\end{pmatrix}$ tienen solución, entonces las filas de $A$ son L.I.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item Para todo $u, v \in \R^n$ se tiene que $||u+v|| < ||u||+||v||$\\\\
+			Tomemos $u = v = \vec{0}$. Luego,
+			$$||\vec{0} + \vec{0}|| < ||\vec{0}|| + ||\vec{0}||$$
+			$$0 < 0$$
+			Lo que es falso. Finalmente, la afirmación es FALSA
+\item Si $u \in Gen\{v_1, v_2\}$ entonces $Gen\{u, v_1\} \subset Gen\{u, v_2\}$\\\\
+			Tomemos
+			$$u = \begin{pmatrix}
+			0 \\ 0 
+			\end{pmatrix}, \quad v_1 = \begin{pmatrix}
+			1 \\ 0 
+			\end{pmatrix}, \quad v_2 = \begin{pmatrix}
+			0 \\ 1
+			\end{pmatrix}$$
+			Aqui se cumple que $u \in Gen\{v_1, v_2\}$. Sin embargo,
+			$$Gen\left\{\begin{pmatrix}
+			0 \\ 0 
+			\end{pmatrix}, \begin{pmatrix}
+			1 \\ 0 
+			\end{pmatrix}\right\} \subset Gen\left\{\begin{pmatrix}
+			0 \\ 0 
+			\end{pmatrix}, \begin{pmatrix}
+			0 \\ 1
+			\end{pmatrix}\right\}$$
+			$$Gen\left\{\begin{pmatrix}
+			1 \\ 0 
+			\end{pmatrix}\right\} \subset Gen\left\{\begin{pmatrix}
+			0 \\ 1
+			\end{pmatrix}\right\}$$
+			Lo que claramente no es cierto. Luego, la afirmación es FALSA
+\item Sea $A$ una matriz de $n \times m$ tal que $n < m $, entonces las columnas de A son L.D.\\\\
+			Esto significa que la matriz esta compuesta por $m$ vectores en $\R^n$. Dicho esto, notemos que pueden haber a lo mas $n$ vectores L.I. (máximo $n$ pivotes) Como $m>n$, deben haber vectores L.D., por lo que la afirmación es VERDADERA.
+\item Si $A$ es una matriz de $2 \times 3$ tal que $Ax = \begin{pmatrix}
+			1\\
+			1
+			\end{pmatrix}$ y $ Ax = \begin{pmatrix}
+			1\\
+			2
+			\end{pmatrix}$ tienen solución, entonces las filas de $A$ son L.I.\\\\
+			Asumiendo que ambos sistemas tienen solución, digamos que las filas de $A$ no serán L.I., es decir, una será múltiplo de la otra. Esto se puede expresar como
+			$$A = \begin{bmatrix}
+			a_{11} & a_{12} & a_{13} \\
+			a_{21} & a_{22} & a_{23}
+			\end{bmatrix} = \begin{bmatrix}
+			a_{11} & a_{12} & a_{13} \\
+			\lambda a_{11} & \lambda a_{12} & \lambda a_{13}
+			\end{bmatrix}$$
+			Resolvamos ahora el sistema $Ax = \begin{pmatrix}
+			b_1 \\ b_2
+			\end{pmatrix}$
+			$$\begin{array}{lcl}
+			a_{11}x_1 + a_{12}x_2 + a_{13}x_3 & = & b_1 \\
+			a_{21}x_1 + a_{22}x_2 + a_{23}x_3 & = & b_2			
+			\end{array} \ra \begin{array}{lcl}
+			a_{11}x_1 + a_{12}x_2 + a_{13}x_3 & = & b_1 \\
+			\lambda a_{11}x_1 + \lambda a_{12}x_2 + \lambda a_{13}x_3 & = & \lambda b_1			
+			\end{array}$$
+			Aqui podemos ver que a lo más uno de los dos sistemas puede tener solución, lo que contradice nuestra hipotesis inicial. Por esto, las filas de $A$ deben ser L.I. Con esto concluimos que la afirmación es VERDADERA
+\end{enumerate}
+\end{solucion}
+\item Sea
+	$$A = \begin{bmatrix}
+	1 & 0 & 6\\
+	-1 & 2 & 0\\
+	0 & 5 & -1
+	\end{bmatrix}$$
+	Escriba $A$ como un producto de matrices elementales
+\begin{solucion}
+Para esto, escalonamos la matriz $A$ hasta reducirla a la matriz identidad. Es importante que hagamos esto paso por paso, sin realizar mas de una operación por fila a la vez.
+		$$\begin{bmatrix}
+		1 & 0 & 6\\
+		-1 & 2 & 0\\
+		0 & 5 & -1
+		\end{bmatrix} \widesim{F_2+F_1}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 2 & 6\\
+		0 & 5 & -1
+		\end{bmatrix} \widesim{F_3-\frac{5}{2}F_2}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 2 & 6\\
+		0 & 0 & -16
+		\end{bmatrix} \widesim{F_3 \leftarrow -\frac{1}{16}F_3}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 2 & 6\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		$$\widesim{F_2 \leftarrow \frac{1}{2}F_2}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 3\\
+		0 & 0 & 1
+		\end{bmatrix} \widesim{F_2 - 3F_3}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix} \widesim{F_1 - 6F_3}
+		\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		Notemos que todas estas operaciones las podemos escribir como matrices elementales, aplicando la operación a la matriz identidad Sean
+		$$E_1 = \begin{bmatrix}
+		1 & 0 & 0\\
+		1 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_2 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & -\frac{5}{2} & 1
+		\end{bmatrix}, E_3 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & -\frac{1}{16}
+		\end{bmatrix}$$
+		$$E_4 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & \frac{1}{2} & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_5 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & -3\\
+		0 & 0 & 1
+		\end{bmatrix}, E_6 = \begin{bmatrix}
+		1 & 0 & -6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		tenemos que
+		$$E_6E_5E_4E_3E_2E_1A = I$$
+		por lo que
+		$$A = E_1^{-1}E_2^{-1}E_3^{-1}E_4^{-1}E_5^{-1}E_6^{-1}$$
+		donde
+		$$E_1^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		-1 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_2^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & \frac{5}{2} & 1
+		\end{bmatrix}, E_3^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & -16
+		\end{bmatrix}$$
+		$$E_4^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 2 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_5^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 3\\
+		0 & 0 & 1
+		\end{bmatrix}, E_6^{-1} = \begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		Finalmente,
+		$$A = \begin{bmatrix}
+		1 & 0 & 0\\
+		-1 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & \frac{5}{2} & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & \frac{1}{16}
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & -\frac{1}{2} & 0\\
+		0 & 0 & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 3\\
+		0 & 0 & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+\end{solucion}
+\item Determinar la matriz inversa de
+$$A = \begin{bmatrix}
+1 & -1 & 0 \\
+0 & 1 & 0 \\
+2 & 0 & 1
+\end{bmatrix}$$
+\begin{solucion}
+Para obtener $A^{-1}$, ampliamos con la matriz identidad y pivoteamos hasta obtener la matriz identidad al lado izquierdo. Luego, la matriz resultante en el lado derecho será la inversa.\\
+\\
+Procedamos,
+$$\left[
+\begin{array}{ccc|ccc}
+1 &-1 & 0 & 1 & 0 & 0 \\
+0 & 1 & 0 & 0 & 1 & 0 \\
+2 & 0 & 1 & 0 & 0 & 1
+\end{array}
+\right] \sim
+\left[
+\begin{array}{ccc|ccc}
+1 &-1 & 0 & 1 & 0 & 0 \\
+0 & 1 & 0 & 0 & 1 & 0 \\
+0 & 0 & 1 &-2 & 0 & 1
+\end{array}
+\right] \sim
+\left[
+\begin{array}{ccc|ccc}
+1 & 0 & 0 & 1 &-1 & 0 \\
+0 & 1 & 0 & 0 & 1 & 0 \\
+0 & 0 & 1 &-2 & 0 & 1
+\end{array}
+\right]
+$$
+Finalmente,
+$$A^{-1} = \begin{bmatrix}
+ 1 &-1 & 0 \\
+ 0 & 1 & 0 \\
+-2 & 0 & 1
+\end{bmatrix}$$
+\end{solucion}
+\item Sea $A$ una matriz de $n\times m$ con columnas LI. Demuestre que si $P=A(A^tA)^{-1}A^{t}$, entonces $P^2=P$ y $P=P^t$.
+\begin{solucion}
+	Recordemos que
+	$$(AB)^t = B^tA^t \qquad y \qquad (AB)^{-1} = B^{-1}A^{-1}$$
+	En primer lugar, demostremos que 
+	$$P^2 = P \ra P = P^2$$
+	Reemplazamos con $P=A(A^tA)^{-1}A^{t}$, es decir
+	$$\begin{array}{rcl}
+	P & = & P^2 \\
+	  & = & (A(A^tA)^{-1}A^{t})(A(A^tA)^{-1}A^{t}) \\
+	  & = & A(A^tA)^{-1}A^{t}A(A^tA)^{-1}A^{t} \\
+	  & = & A(A^tA)^{-1}(A^{t}A)(A^tA)^{-1}A^{t} \\
+	  & = & A(A^tA)^{-1}A^{t} \\
+	P & = & P
+	\end{array}$$
+	$$\blacksquare$$
+	Ahora, demostremos que $P = P^t$, esto es,
+	$$\begin{array}{rcl}
+	P & = & P^t \\
+	  & = & (A(A^tA)^{-1}A^{t})^t \\
+	  & = & ((A(A^tA)^{-1})A^{t})^t \\
+	  & = & A(A(A^tA)^{-1})^t \\
+	  & = & A(A^tA)^{-t}A^t \\
+	  & = & A((A^tA)^t)^{-1}A^t \\
+	  & = & A(A^tA)^{-1}A^t \\
+	P & = & P
+	\end{array}$$
+	$$\blacksquare$$
+\end{solucion}
+\item Sea $A$ una matriz de $3\times 3$ tal que
+      $$A\left(\begin{array}{r}
+  1\\0\\1
+\end{array}\right)= \left(\begin{array}{r}
+  1\\0\\0
+\end{array}\right),\quad\quad A \left(\begin{array}{r}
+  1\\-2\\4
+\end{array}\right)= \left(\begin{array}{r}
+  1\\0\\1
+\end{array}\right), \qquad  A\left(\begin{array}{r}
+  -1\\1\\1
+\end{array}\right)= \left(\begin{array}{r}
+  0\\1\\1
+\end{array}\right).$$ Calcule $A^{-1}$.
+\begin{solucion}
+Recordemos que para $A_{m \times n}$ y $v_1, v_2 \in \R^{n}$, siempre se cumple que
+$$Av1 + Av2 = A(v_1 + v_2)$$
+y recordemos también que al multiplicar dos matrices, se esta multiplicando la primera matriz con las columnas de la segunda para generar la matriz resultante, es decir, siendo $B = [v_1\ v_2\ \dots\ v_n]$,
+$$AB = A[v_1\ v_2\ \dots\ v_n] = [Av_1\ Av_2\ \dots\ Av_n]$$
+Procedamos con el ejercicio.\\
+\\
+Llamemos $v_1, v_2, v_3$ a todos los vectores que son multiplicados por $A$ en el enunciado, respectivamente y $u_1, u_2, u_3$ a sus respectivos resultados.\\
+\\
+Para obtener la inversa de $A$, debemos encontrar una matriz que al multiplicarla por $A$ nos de la matriz identidad.\\
+\\
+Busquemos entonces una forma de construir las columnas de la matriz identidad (vectores canónicos) con una combinación lineal de los vectores $u_i$. Si tuvieramos vectores más complejos, tendríamos que resolver el sistema $\alpha u_1 + \beta u_2 + \gamma u_3 = e_i$ para $i = \{1, 2, 3\}$. Sin embargo, dado que estos vectores son bastante simples, podemos hacerlo de manera analitica, esto es,
+$$e_1 = u_1, \quad e_2 = , u_3-u_2+u_1, \quad e_3 = u_2 - u_1$$
+Luego,
+$$I = [u_1\quad u_3-u_2+u_1\quad u_2-u_1]$$
+Utilizando las propiedades mencionadas al principio,
+$$I = [Av_1\quad A(v_3-v_2+v_1)\quad A(v_2-v_1)]$$
+$$I = A[v_1\quad v_3-v_2+v_1\quad v_2-v_1]$$
+$$A^{-1} = [v_1\quad v_3-v_2+v_1\quad v_2-v_1]$$
+Por lo tanto, la inversa de $A$ corresponde a
+$$A^{-1} = 
+\begin{bmatrix}
+1 &-1 & 0 \\
+0 & 3 & -2 \\
+1 &-2 &3 
+\end{bmatrix}$$
+\end{solucion}
+\item Demuestre que $T(x_1,x_2, x_3)=(x_1,x_1+x_2, x_1+x_2+x_3)$ es invertible y encuentre una f\'ormula para $T^{-1}$.
+\begin{solucion}
+En primer lugar determinemos la matriz de la transformación lineal $T$.\\
+Sea $Ax = T(x)$,
+$$A = \begin{bmatrix}
+1 & 0 & 0 \\
+1 & 1 & 0 \\
+1 & 1 & 1
+\end{bmatrix}$$
+Notemos que la matriz esta escalonada "al revés". En otras palabras, $A^t$ estaría escalonada y es evidente que tiene 3 pivotes, por lo que $A$ igual tiene 3 pivotes. Al tener igual cantidad de pivotes que de columnas, la matriz $A$ es invertible.\\
+\\
+Ahora, busquemos $A^-1$, esto es
+$$\left[
+\begin{array}{ccc|ccc}
+1 & 0 & 0 & 1 & 0 & 0 \\
+1 & 1 & 0 & 0 & 1 & 0 \\
+1 & 1 & 1 & 0 & 0 & 1
+\end{array}
+\right] \sim 
+\left[
+\begin{array}{ccc|ccc}
+1 & 0 & 0 & 1 & 0 & 0 \\
+0 & 1 & 0 & -1 & 1 & 0 \\
+0 & 1 & 1 & -1 & 0 & 1
+\end{array}
+\right] \sim 
+\left[
+\begin{array}{ccc|ccc}
+1 & 0 & 0 & 1 & 0 & 0 \\
+0 & 1 & 0 & -1 & 1 & 0 \\
+0 & 0 & 1 & 0 & -1 & 1
+\end{array}
+\right]
+$$
+Es decir,
+$$A^{-1} = 
+\begin{bmatrix}
+ 1 & 0 & 0 \\
+-1 & 1 & 0 \\
+0 & -1 & 1
+\end{bmatrix}
+$$
+Finalmente, podemos escribir $T^{-1}(x)$ como
+$$T^{-1}(x) = (x_1, -x_1 + x_2, -x_2+x_3)$$
+\end{solucion}
 \end{preguntas}
 \end{document}
