Enunciado de 2019/1/MAT1203/15

--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -268,6 +268,14 @@
 	-3 & -2 & -7
 	\end{bmatrix}
 	$ y $b$ un vector en $R^3$. ¿La ecuación $Ax=b$ es consistente para todo $b$?
+\item Determinar las condiciones en $a$ para que la matriz
+	$$A = \begin{bmatrix}
+	a & 2a & 0 & 0 \\
+	0 & 1 & 0 & 3a-1\\
+	0 & 1 & a-1 & 2a-1\\
+	a & 2a & 0 & a
+	\end{bmatrix}$$
+	sea invertible
 \item Sean los vectores 
 	$$
 	v_1 = \begin{pmatrix}
