Enunciado de 2019/1/MAT1203/15

--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -305,6 +305,7 @@ $$v_1=\left(\begin{array}{r}
 ¿Para qué valor(es) de $h$ $Gen\{v_1, v_2, v_3\}=Gen\{v_1,v_2\}$ ?
 \item Sean $\{u, v, w\}$ un conjunto de vectores linealmente independientes. Demuestre que el conjunto $\{u+v, u+2w, v+3u+w\}$ es linealmente independiente.
 \item Demuestre que el conjunto $\{u, v, w\}$ es L.I. si y solo si el conjunto $\{u+v, u+w, v+w\}$ es L.I.
+\item Sea $A$ una matriz de $4 \times 4$ tal que $A=\begin{bmatrix}a_1 & 2a_1 & a_2 & a_1-a_2\end{bmatrix}$ con $a_1, a_2 \in \R^4$ vectores linealmente independientes, y sea $B$ una matriz inyectiva de $4 \times 2$ tal que $A \cdot B = 0$. Determine una matriz con las características de $B$.
 \item Sea $L: P_2(\R) \ra \R^2$ una transformación lineal tal que
 	$$L(1+x) = \begin{pmatrix}
 	1\\
