--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -380,5 +380,65 @@ $$A = \begin{bmatrix}
   0\\1\\1
 \end{array}\right).$$ Calcule $A^{-1}$.
 \item Demuestre que $T(x_1,x_2, x_3)=(x_1,x_1+x_2, x_1+x_2+x_3)$ es invertible y encuentre una f\'ormula para $T^{-1}$.
+\item Determine si las siguientes afirmaciones son verdaderas o falsas. En caso de ser verdaderas demuéstrelas y si son falsas de un contraejemplo.
+\begin{enumerate}[a)]
+\item Si $\{v_1, v_2, v_3\}$ es un conjunto linealmente dependiente de vectores en $\R^3$ entonces el conjunto $\{v_1, v_2\}$ también es linealmente dependiente.
+\item Si $A$ es una matriz de $3 \times 3$ entonces la imagen del plano $x+y+z=0$ bajo la transformación $T(x)=Ax$ es un plano.
+\item Si $A_{2\times 2} = (a_{ij}), \quad B_{2\times 3} = (b_{ij}), \quad AB = C = (c_{ij})$ tal que
+$$a_{ij} = (-2)^{i+j}, \quad b_{ij} = (-3)^{i-j}$$
+entonces $c_{23} = -\dfrac{56}{9}$
+\end{enumerate}
+\item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
+\begin{enumerate}[a)]
+\item Si el conjunto $\{v_1, v_2, v_3, v_4\}$ es L.I., entonces $\{v_1, v_2, v_3\}$ también lo es.
+\item Si $A$ es una matriz de $3\times 5$ y $T$ es la transformación lineal definida por $T(x) = Ax$, entonces $T$ tiene dominio $\R^3$.
+\item Un sistema con más ecuaciones que incógnitas es siempre consistente.
+\end{enumerate}
+\item Encuentre una factorziación $A = LU$ de
+	$$A = \begin{bmatrix}
+	2 & 4 & -1 & 5 & -2 \\
+	-4 & -5 & 3 & -8 & 1 \\
+	2 & -5 & -4 & 1 & 8 \\
+	-6 & 0 & 7 & -3 & 1
+	\end{bmatrix}$$
+\item Sea $A = \begin{bmatrix}
+	1 & 2 & 3\\
+	2 & 8 & 4 \\
+	3 & 4 & 11\end{bmatrix}$. Calcule la factorización $A=LDL^T$ de la matriz $A$ y en base a esto encuentre una matriz $R$ tal que $A = RR^T$.
+\item Sea una descomposción $PA = LU$ donde
+	$$P = \begin{bmatrix}
+	0 & 0 & 1\\
+	0 & 1 & 0\\
+	1 & 0 & 0
+	\end{bmatrix}, \quad
+	L = \begin{bmatrix}
+	1 & 0 & 0\\
+	-1 & 1 & 0\\
+	0 & 1 & 1
+	\end{bmatrix}, \quad
+	U = \begin{bmatrix}
+	2 & 1 & 0\\
+	0 & 1 & 1\\
+	0 & 0 & -1
+	\end{bmatrix}$$
+	determine usando directamente esta factorización la tercera fila de $A^{-1}$.
+\item Sea $A$ una matriz de $n \times n$ definida por
+	$$a_{i,j} = 
+	\begin{cases}
+	3 \quad si\ i\leq j \\
+	1 \quad si\ i > j
+	\end{cases}$$
+	Calcule $det(A)$.
+\item Calcular el determinante de siguiente matriz de $n\times n$
+	$$ \begin{bmatrix}
+	-3 & x & x & \dots & x \\
+	x & -3 & x & \dots & x \\
+	x & x & -3 & \dots & x \\
+	\vdots & \vdots & \vdots & \ddots & \vdots \\
+	x & x & x & \dots & -3
+	\end{bmatrix}$$
+\item Sean $v_1,v_2,v_3,v_4 \in \R^4$, encuentre el $|A|$ si\\
+$A=[v_1-v_3+v_4 \;\;\;\;-v_2-v_3 \;\;\;\; v_3-v_1
+\;\;\;\;v_1+v_2+2v_4 ]\in M_4 (\R)$
 \end{preguntas}
 \end{document}
